// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Selected PlayListItem renders correctly 1`] = `
<div>
  <li
    class="w-full h-10 mb-[0.25rem] flex items-center justify-between bg-lightning-blue transition-colors duration-300"
  >
    <div
      class="flex flex-col text-left"
    >
      <p
        class="font-medium text-sm text-deep-yellow"
      >
        Tidal Drift
      </p>
      <p
        class="font-medium text-sm text-wing-red"
      >
        Echoes of the Sea
      </p>
    </div>
    <div>
      <p
        class="font-medium text-sm text-wing-red"
      >
        8:02
      </p>
    </div>
  </li>
</div>
`;

exports[`Unselected PlayListItem renders correctly 1`] = `
<div>
  <li
    class="w-full h-10 mb-[0.25rem] flex items-center justify-between hover:bg-lightning-blue transition-colors duration-300"
  >
    <div
      class="flex flex-col text-left"
    >
      <p
        class="font-medium text-sm text-deep-yellow"
      >
        Tidal Drift
      </p>
      <p
        class="font-medium text-sm text-wing-red"
      >
        Echoes of the Sea
      </p>
    </div>
    <div>
      <p
        class="font-medium text-sm text-wing-red"
      >
        8:02
      </p>
    </div>
  </li>
</div>
`;
